changed truncation length of lead tex in calendar view. Css changes to prevent link arrow from wrapping

--- a/web/sites/default/themes/ubnext/less/ubn-event-occasions.less
+++ b/web/sites/default/themes/ubnext/less/ubn-event-occasions.less
@@ -50,18 +50,22 @@
 		font-family: @font-family-sans-serif;
 		margin-right: 22px;
     	font-size: 18px;
+    	line-height: 1.5;
+    	padding-right: 20px;
+    	display: inline-block;
     	&:after{
     		font-family: "FontAwesome";
     		content: "\f061";
     		position: relative;
     		top: -2px;
-    		margin-left: 8px;
+    		left: 26px;
+    		margin-left: -15px;
     		display: inline-block;
     		font-size: 12px;
+    		margin-left: -20px;
+  			width: 20px;
     	}
 	}
-
-
 
 	.event-occations-event-day-of-month{
 		font-size: 34px;
